--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Baileys
+auth_info_baileys/
+
 # Logs
 logs
 *.log
@@ -128,3 +131,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Others
+package-lock.json
