--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "A simple WhatsApp chatbot",
   "nodemonConfig": {
-    "ignore": ["node_modules/", "auth_info_baileys/"]
+    "ignore": [
+      "node_modules/",
+      "auth_info_baileys/"
+    ]
   },
   "scripts": {
     "start": "node src/index.js",
@@ -12,8 +15,9 @@
   "author": "Juniorkrz#7721",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
-    "qrcode-terminal": "^0.12.0",
-    "nodemon": "^3.0.2"
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.2",
+    "qrcode-terminal": "^0.12.0"
   },
   "license": "MIT"
 }
